# parametric_expressions

./: .gitignore  README.md  d1221.md  d1221r2.html
cppnow2019/: Outline.md  slide_code.html
docs/: index.html  style.css  typeless-functions-2.html  typeless-functions-3.html  typeless-functions.html
metabench/: CMakeLists.txt  cppdock.json
metabench/hana/: at.cpp.erb  at_key.cpp.erb  cartesian_product.cpp.erb
play/: Makefile  check  test0.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
semabench/: CMakeLists.txt
toolchain/: Dockerfile  Dockerfile-emscripten  Dockerfile-vanilla  Makefile  install_src.sh  install_src_vanilla.sh
